# Android_camera_preview

./: .gitignore  README.md  build.gradle  gradle.properties  settings.gradle
.circleci/: config.yml
advanced-surface-texture/: build.gradle
advanced-surface-texture/src/main/: AndroidManifest.xml
advanced-surface-texture/src/main/cxx/: CMakeLists.txt  hardware_buffer_ext.cc  hardware_buffer_ext.hh
advanced-surface-texture/src/main/cxx/jni/: com_chraac_advsurfacetexture_EGLFunctionsImpl.cc  com_chraac_advsurfacetexture_EGLFunctionsImpl.hh  com_chraac_advsurfacetexture_NativeImageReader.cc  com_chraac_advsurfacetexture_NativeImageReader.hh  com_chraac_advsurfacetexture_NativeObject.cc  com_chraac_advsurfacetexture_NativeObject.hh  com_chraac_advsurfacetexture_SurfaceExt.cc  com_chraac_advsurfacetexture_SurfaceExt.hh  jni_helper.hh  jni_load.cc
advanced-surface-texture/src/main/java/com/chraac/advsurfacetexture/: AdvSurfaceTexture.kt  AdvSurfaceTextureEx.kt  EGLFunctions.kt  EGLFunctionsImpl.kt  EGLImageKHR.kt  GLFunctions.kt  ImageReader.kt  NativeImageReader.kt  NativeObject.kt  SurfaceExt.kt  SurfaceTextureProvider.kt  SystemImageReader.kt  SystemSurfaceTexture.kt
advanced-surface-texture/src/test/java/com/chraac/advsurfacetexture/: AdvSurfaceTextureExUnitTest.kt  AdvSurfaceTextureUnitTest.kt
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/chraac/camera/preview/: CameraActivity.kt
app/src/main/java/com/chraac/camera/preview/fragments/: CameraFragment.kt  PermissionsFragment.kt  SelectorFragment.kt
app/src/main/java/com/example/android/camera2/video/fragments/: CameraFragment.kt
app/src/main/res/layout/: activity_camera.xml  fragment_camera.xml
app/src/main/res/layout-land/: fragment_camera.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: strings.xml
extSurfaceTexture/: build.gradle
extSurfaceTexture/src/main/: AndroidManifest.xml
extSurfaceTexture/src/main/cxx/: CMakeLists.txt  com_chraac_extsurfacetexture_EGLFunctionsImpl.cc  hardware_buffer_ext.cc  hardware_buffer_ext.hh  jni_load.cc  surface_texture_ext_jni.cc  surface_texture_ext_jni.hh
extSurfaceTexture/src/main/java/com/chraac/extsurfacetexture/: EGLFunctions.kt  EGLFunctionsImpl.kt  EGLImage.kt  EGLImageKHR.kt  ExtSurfaceTexture.kt  GLFunctions.kt  SurfaceTextureProvider.kt
extSurfaceTexture/src/test/java/com/chraac/extsurfacetexture/: ExtSurfaceTextureUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
utils/: build.gradle
utils/src/main/: AndroidManifest.xml
utils/src/main/java/com/chraac/camera/preview/utils/: AutoFitSurfaceView.kt  BufferQueueProducer.kt  CameraSizes.kt  DrawerBase.kt  GLES20Functions.kt  GLHandlerThread.kt  GLSurfaceTextureDrawer.kt  GenericListAdapter.kt  OrientationLiveData.kt  SurfaceTextureDrawer.kt  SurfaceTextureManager.kt  SurfaceTextureManagerImpl.kt  SurfaceTextureProviderImpl.kt  YuvToRgbConverter.kt
utils/src/main/java/com/example/android/camera/utils/: AutoFitSurfaceView.kt  BufferQueueProducer.kt  DrawerBase.kt  GLHandlerThread.kt  GLSurfaceTextureDrawer.kt  SurfaceTextureDrawer.kt  SurfaceTextureExt.kt  SurfaceTextureWrapper.kt
utils/src/test/java/com/chraac/camera/preview/utils/: DrawerBaseUnitTest.kt  DrawerUnitTest.kt
utils/src/test/java/com/example/android/camera/utils/: DrawerUnitTest.kt
